WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51562
Assertion when loading www.yahoo.com in WebKit2 under decodeResourceRequest
https://bugs.webkit.org/show_bug.cgi?id=51562
Summary
Assertion when loading www.yahoo.com in WebKit2 under decodeResourceRequest
Brian Weinstein
Reported
2010-12-23 14:50:30 PST
We are hitting an assertion when loading yahoo.com in WebKit2.
Attachments
[PATCH] Fix
(1.23 KB, patch)
2010-12-23 14:52 PST
,
Brian Weinstein
andersca
: review+
Details
Formatted Diff
Diff
[PATCH] Fix - Darin's comment
(2.47 KB, patch)
2010-12-23 15:06 PST
,
Brian Weinstein
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Brian Weinstein
Comment 1
2010-12-23 14:52:15 PST
Created
attachment 77370
[details]
[PATCH] Fix
Darin Adler
Comment 2
2010-12-23 14:53:54 PST
Comment on
attachment 77370
[details]
[PATCH] Fix We might want to fix this at the DataReference level instead. I also found it inconvenient when writing the web archive code that DataReference wanted to assert if I called data() on an empty one.
Brian Weinstein
Comment 3
2010-12-23 15:06:08 PST
Created
attachment 77371
[details]
[PATCH] Fix - Darin's comment
Brian Weinstein
Comment 4
2010-12-23 15:37:20 PST
Landed in
r74588
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug