Assertion when loading www.yahoo.com in WebKit2 under decodeResourceRequest https://bugs.webkit.org/show_bug.cgi?id=51562

Reviewed by Anders Carlsson.

Don't assert that our data reference isn't empty when we try to get the data from it.
If it is empty, just return 0.

All callers are safe with this function returning 0.

* Platform/CoreIPC/DataReference.h:
(CoreIPC::DataReference::data): Change the assert to an early return.
* Shared/cf/ArgumentCodersCF.cpp:
(CoreIPC::decode): Add an assert, and remove a ternarny operator because the function now does
    this for us (if the data is empty, return 0).



Canonical link: https://commits.webkit.org/64927@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74588 268f45cc-cd09-0410-ab3c-d52691b4dbfc